# task

./: Anchor.toml  Cargo.toml  README.md  Trident.toml  txtx.yml
cli/: Cargo.toml
merkle-tree/: Cargo.toml
merkle-tree/src/: airdrop_merkle_tree.rs  csv_entry.rs  merkle_tree.rs  tree_node.rs  utils.rs
programs/merkle-distributor-fee-task/: Cargo.toml
programs/merkle-distributor-fee-task/src/: error.rs  lib.rs
programs/merkle-distributor-fee-task/src/instructions/: claim_locked.rs  clawback.rs  initialize_fee_config.rs  mod.rs  new_claim.rs  new_distributor.rs  set_admin.rs  set_claim_fee.rs  set_clawback_receiver.rs  set_fee_admin.rs
programs/merkle-distributor-fee-task/src/state/: claim_status.rs  claimed_event.rs  fee_config.rs  merkle_distributor.rs  mod.rs
runbooks/: deployment.tx
scripts/: devnet-e2e.ts  devnet-sad-cases.ts
sdk/: package-lock.json  package.json  tsconfig.json
sdk/idl/: merkle_distributor.json
sdk/src/: distributor.ts  index.ts  types.ts  utils.ts  versioning-system.ts
sdk/src/__tests__/: fee-config.test.ts
sdk/src/utils/: merkle-tree.ts
tests/: claim-fee-negative.ts  merkle-distributor-fee-task.ts  sdk-cli-e2e.ts  surfpool-e2e.ts
tests/litesvm/: Cargo.toml
tests/litesvm/src/: claim_fee_e2e.rs  fee_integration.rs
trident-tests/: Cargo.toml  Trident.toml
trident-tests/fuzz_0/: fuzz_accounts.rs  test_fuzz.rs  types.rs
verify/: Cargo.toml
verify/src/: lib.rs
