[workspace]
members = [
    "programs/*",
    "verify",
    "merkle-tree",
    "cli",
    "trident-tests"
]
exclude = ["tests/litesvm"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
