[package]
name = "distributor-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
clap = { version = "3.2", features = ["derive", "env"] }
jito-merkle-tree = { path = "../merkle-tree" }
merkle-distributor-fee-task = { path = "../programs/merkle-distributor-fee-task", features = ["no-entrypoint"] }
solana-program = "2"
solana-sdk = "2"
solana-rpc-client = "2"
spl-associated-token-account = "4"
