[package]
name = "jito-merkle-tree"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
fast-math = "0.1"
indexmap = "2.1.0"
jito-merkle-verify = { path = "../verify" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-program = "2"
solana-sdk = "2"
thiserror = "1.0"

[dev-dependencies]
hex = "0.4.3"
rand = "0.8.5"
