[package]
name = "merkle-distributor-litesvm-tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "fee_integration"
path = "src/fee_integration.rs"

[[test]]
name = "claim_fee_e2e"
path = "src/claim_fee_e2e.rs"

[dependencies]
litesvm = "0.11"
solana-keypair = "3.1"
solana-signer = "3.0"
solana-transaction = { version = "3.0", features = ["verify"] }
solana-message = "3.0.1"
solana-instruction = "3.0"
solana-pubkey = "4"
solana-system-interface = { version = "2.0", features = ["bincode"] }
solana-hash = "2"
sha2 = "0.10"
solana-clock = "3.0"
solana-account = "3.0"
